Reflexion does not improve the result. Have to convert the graph into a StateGraph

--- a/03. Improve Output Quality/Improve_Output_Quality_2_Reflexion.ipynb
+++ b/03. Improve Output Quality/Improve_Output_Quality_2_Reflexion.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:18.360971Z",
-     "start_time": "2024-07-26T06:50:18.353451Z"
+     "end_time": "2024-07-26T07:18:53.551197Z",
+     "start_time": "2024-07-26T07:18:53.536189Z"
     }
    },
    "cell_type": "code",
@@ -43,8 +43,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:19.484858Z",
-     "start_time": "2024-07-26T06:50:18.784257Z"
+     "end_time": "2024-07-26T07:18:54.655601Z",
+     "start_time": "2024-07-26T07:18:54.039997Z"
     }
    },
    "cell_type": "code",
@@ -163,8 +163,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:22.312142Z",
-     "start_time": "2024-07-26T06:50:19.487868Z"
+     "end_time": "2024-07-26T07:18:56.389633Z",
+     "start_time": "2024-07-26T07:18:54.657593Z"
     }
    },
    "cell_type": "code",
@@ -180,8 +180,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:22.343888Z",
-     "start_time": "2024-07-26T06:50:22.317141Z"
+     "end_time": "2024-07-26T07:18:56.420284Z",
+     "start_time": "2024-07-26T07:18:56.392628Z"
     }
    },
    "cell_type": "code",
@@ -249,8 +249,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:22.935Z",
-     "start_time": "2024-07-26T06:50:22.347881Z"
+     "end_time": "2024-07-26T07:18:57.042440Z",
+     "start_time": "2024-07-26T07:18:56.422285Z"
     }
    },
    "cell_type": "code",
@@ -300,8 +300,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:24.380068Z",
-     "start_time": "2024-07-26T06:50:22.938011Z"
+     "end_time": "2024-07-26T07:18:58.475868Z",
+     "start_time": "2024-07-26T07:18:57.045437Z"
     }
    },
    "cell_type": "code",
@@ -322,7 +322,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_b256', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer ID and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"}}', 'name': 'AnswerQuestion'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 152, 'prompt_tokens': 1916, 'total_tokens': 2068, 'completion_time': 0.483871534, 'prompt_time': 0.240173409, 'queue_time': None, 'total_time': 0.724044943}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_c1a4bcec29', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-2eb75c56-3113-470e-9354-bd863b67726c-0', tool_calls=[{'name': 'AnswerQuestion', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'reflection': {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}}, 'id': 'call_b256'}])"
+       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_1pwq', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer ID and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"}}', 'name': 'AnswerQuestion'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 152, 'prompt_tokens': 1916, 'total_tokens': 2068, 'completion_time': 0.482247719, 'prompt_time': 0.163654674, 'queue_time': None, 'total_time': 0.6459023930000001}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_c1a4bcec29', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-3044b7d1-90db-44da-838f-1cbfc1d14b73-0', tool_calls=[{'name': 'AnswerQuestion', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'reflection': {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}}, 'id': 'call_1pwq'}])"
       ]
      },
      "execution_count": 6,
@@ -341,23 +341,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:24.396075Z",
-     "start_time": "2024-07-26T06:50:24.384074Z"
+     "end_time": "2024-07-26T07:18:58.522036Z",
+     "start_time": "2024-07-26T07:18:58.479866Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "revise_instructions = \"\"\"Revise your previous answer using the new information.\n",
-    "    - You should use the previous reflection to add important information to your answer.\n",
+    "revise_instructions = f\"\"\"\n",
+    "You are an expert at PostgreSQL. You have access to a PostgreSQL database \n",
+    "with the following tables\n",
+    "\n",
+    "{db.table_info}\n",
+    "\n",
+    "Revise your previous_select_query using given reflection.\n",
+    "You should use ReviseAnswer tool to give your answer.\n",
     "\"\"\"\n",
     "\n",
     "\n",
     "class ReviseAnswer(AnswerQuestion):\n",
-    "    \"\"\"Revise your original answer to your question. Provide an answer and \n",
+    "    \"\"\"Revise your original PostgreSQL SELECT statement to your question. Provide an answer and \n",
     "    reflection on the revised answer.\"\"\"\n",
     "\n",
-    "    think_process: list[str] = Field(\n",
-    "        description=\"Factors motivating your updated select SQL query.\"\n",
+    "    new_query: str = Field(\n",
+    "        description=\"The revised PostgreSQL SELECT statement according to given reflection.\"\n",
     "    )\n",
     "\n",
     "\n",
@@ -376,8 +382,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:25.579998Z",
-     "start_time": "2024-07-26T06:50:24.399081Z"
+     "end_time": "2024-07-26T07:18:59.642240Z",
+     "start_time": "2024-07-26T07:18:58.524039Z"
     }
    },
    "cell_type": "code",
@@ -391,7 +397,9 @@
     "        ToolMessage(\n",
     "            tool_call_id=initial.tool_calls[0][\"id\"],\n",
     "            content=json.dumps(\n",
-    "                {\"reflection\": initial.tool_calls[0][\"args\"][\"reflection\"]}\n",
+    "                {\n",
+    "                 \"reflection\": initial.tool_calls[0][\"args\"][\"reflection\"]\n",
+    "                }\n",
     "            ),\n",
     "        ),\n",
     "    ]\n",
@@ -410,7 +418,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_68tv', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer ID and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"},\"think_process\":[\"The user asked to graph the total number of orders of each customer. I used the ReviseAnswer tool to get the relevant data from the orders table. The query groups the orders by customer ID and counts the total orders for each customer. The result is a DataFrame with customer IDs and their corresponding total orders.\"]}', 'name': 'ReviseAnswer'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 196, 'prompt_tokens': 2207, 'total_tokens': 2403, 'completion_time': 0.619175784, 'prompt_time': 0.172345425, 'queue_time': None, 'total_time': 0.7915212089999999}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_2f30b0b571', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-b1912fdf-fb03-4b17-a6f2-ec05743eb893-0', tool_calls=[{'name': 'ReviseAnswer', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'reflection': {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}, 'think_process': ['The user asked to graph the total number of orders of each customer. I used the ReviseAnswer tool to get the relevant data from the orders table. The query groups the orders by customer ID and counts the total orders for each customer. The result is a DataFrame with customer IDs and their corresponding total orders.']}, 'id': 'call_68tv'}])"
+       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_3rsc', 'function': {'arguments': '{\"select_query\":\"SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\",\"df_columns\":[\"customer_id\",\"total_orders\"],\"df_name\":\"customer_orders\",\"new_query\":\"\",\"reflection\":{\"good\":\"The query effectively groups the orders by customer ID and counts the total orders for each customer.\",\"improvements\":\"Consider adding a filter to only include customers with a minimum number of orders.\",\"missing\":\"The query does not provide any additional insights beyond the total orders per customer.\"}}', 'name': 'ReviseAnswer'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 134, 'prompt_tokens': 2765, 'total_tokens': 2899, 'completion_time': 0.436089355, 'prompt_time': 0.257014212, 'queue_time': None, 'total_time': 0.6931035670000001}, 'model_name': 'llama3-70b-8192', 'system_fingerprint': 'fp_87cbfbbc4d', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-76ffd439-cb66-43dc-876d-42d882ef5962-0', tool_calls=[{'name': 'ReviseAnswer', 'args': {'select_query': 'SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC', 'df_columns': ['customer_id', 'total_orders'], 'df_name': 'customer_orders', 'new_query': '', 'reflection': {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}}, 'id': 'call_3rsc'}])"
       ]
      },
      "execution_count": 8,
@@ -429,8 +437,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:25.704089Z",
-     "start_time": "2024-07-26T06:50:25.582985Z"
+     "end_time": "2024-07-26T07:20:48.596381Z",
+     "start_time": "2024-07-26T07:20:48.572973Z"
     }
    },
    "cell_type": "code",
@@ -455,7 +463,7 @@
    ],
    "id": "dc21da051ace811",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -466,14 +474,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:25.736132Z",
-     "start_time": "2024-07-26T06:50:25.709088Z"
+     "end_time": "2024-07-26T07:20:50.441275Z",
+     "start_time": "2024-07-26T07:20:50.420269Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from typing import Literal\n",
+    "# TODO: Convert this into a StateGraph (now its a MessageGraph)\n",
     "\n",
+    "from typing import Literal\n",
     "from langgraph.graph import END, MessageGraph, START\n",
     "\n",
     "MAX_ITERATIONS = 3\n",
@@ -515,13 +524,13 @@
    ],
    "id": "622092815e173888",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:50:26.831958Z",
-     "start_time": "2024-07-26T06:50:25.738127Z"
+     "end_time": "2024-07-26T07:20:52.141584Z",
+     "start_time": "2024-07-26T07:20:51.148825Z"
     }
    },
    "cell_type": "code",
@@ -543,13 +552,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 11
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:51:04.269010Z",
-     "start_time": "2024-07-26T06:50:26.834951Z"
+     "end_time": "2024-07-26T07:20:57.502439Z",
+     "start_time": "2024-07-26T07:20:52.739803Z"
     }
    },
    "cell_type": "code",
@@ -576,8 +585,8 @@
       "Step 1\n",
       "==================================\u001B[1m Ai Message \u001B[0m==================================\n",
       "Tool Calls:\n",
-      "  AnswerQuestion (call_yk55)\n",
-      " Call ID: call_yk55\n",
+      "  AnswerQuestion (call_179c)\n",
+      " Call ID: call_179c\n",
       "  Args:\n",
       "    select_query: SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\n",
       "    df_columns: ['customer_id', 'total_orders']\n",
@@ -592,35 +601,43 @@
       "Step 3\n",
       "==================================\u001B[1m Ai Message \u001B[0m==================================\n",
       "Tool Calls:\n",
-      "  ReviseAnswer (call_9dke)\n",
-      " Call ID: call_9dke\n",
+      "  ReviseAnswer (call_vxna)\n",
+      " Call ID: call_vxna\n",
       "  Args:\n",
       "    select_query: SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\n",
       "    df_columns: ['customer_id', 'total_orders']\n",
       "    df_name: customer_orders\n",
-      "    reflection: {'good': 'The revised query still effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The revised query does not provide any additional insights beyond the total orders per customer.'}\n",
-      "    think_process: ['The user asked for a graph of the total number of orders of each customer. I provided a query to achieve this. The user then asked me to reflect on the query and revise my answer. I realized that the query could be improved by adding a filter to only include customers with a minimum number of orders.']\n",
+      "    new_query: \n",
+      "    reflection: {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}\n",
       "Step 4\n",
       "=================================\u001B[1m Tool Message \u001B[0m=================================\n",
       "Name: ReviseAnswer\n",
       "\n",
-      "[{\"reflection\": \"The revised query does not provide any additional insights beyond the total orders per customer.Consider adding a filter to only include customers with a minimum number of orders.\"}]\n",
+      "[{\"reflection\": \"The query does not provide any additional insights beyond the total orders per customer.Consider adding a filter to only include customers with a minimum number of orders.\"}]\n",
       "attempt: 0\n",
       "Step 5\n",
       "==================================\u001B[1m Ai Message \u001B[0m==================================\n",
       "Tool Calls:\n",
-      "  ReviseAnswer (call_axzg)\n",
-      " Call ID: call_axzg\n",
+      "  ReviseAnswer (call_088p)\n",
+      " Call ID: call_088p\n",
       "  Args:\n",
       "    select_query: SELECT customer_id, COUNT(order_id) as total_orders FROM orders GROUP BY customer_id ORDER BY customer_id ASC\n",
       "    df_columns: ['customer_id', 'total_orders']\n",
       "    df_name: customer_orders\n",
-      "    reflection: {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}\n",
-      "    think_process: ['The user asked for a graph of the total number of orders of each customer. I provided a query to achieve this. The user then asked me to reflect on the query and revise my answer. I realized that the query could be improved by adding a filter to only include customers with a minimum number of orders. However, I understand that the user wants a graph, so I should provide a revised answer that includes a graphing component.']\n"
+      "    new_query: \n",
+      "    reflection: {'good': 'The query effectively groups the orders by customer ID and counts the total orders for each customer.', 'improvements': 'Consider adding a filter to only include customers with a minimum number of orders.', 'missing': 'The query does not provide any additional insights beyond the total orders per customer.'}\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "fbac606ddcc5d3a0"
   }
  ],
  "metadata": {
