--- a/03. Improve Output Quality/Improve_Output_Quality_2_Reflexion.ipynb
+++ b/03. Improve Output Quality/Improve_Output_Quality_2_Reflexion.ipynb
@@ -34,7 +34,9 @@
     "\n",
     "# os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
     "# os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
-    "# os.environ['LANGCHAIN_API_KEY'] = langchain_api_key"
+    "# os.environ['LANGCHAIN_API_KEY'] = langchain_api_key\n",
+    "\n",
+    "REFLEXION_LOOP_COUNT = 3"
    ],
    "id": "4b11aed2c8a90999",
    "outputs": [],
@@ -183,61 +185,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-28T06:15:40.101020Z",
-     "start_time": "2024-07-28T06:15:40.086145Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "from langchain_core.messages import HumanMessage, ToolMessage\n",
-    "from langchain_core.output_parsers.openai_tools import PydanticToolsParser\n",
-    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
-    "from langchain_core.pydantic_v1 import BaseModel, Field, ValidationError\n",
-    "from typing import List, Optional\n",
-    "\n",
-    "REFLEXION_LOOP_COUNT = 3\n",
-    "\n",
-    "\n",
-    "class ResponderWithRetries:\n",
-    "    def __init__(self, runnable, validator):\n",
-    "        self.runnable = runnable\n",
-    "        self.validator = validator\n",
-    "\n",
-    "    def respond(self, state: list):\n",
-    "        response = []\n",
-    "        for attempt in range(REFLEXION_LOOP_COUNT):\n",
-    "            print(f\"attempt: {attempt}\")\n",
-    "            response = self.runnable.invoke(\n",
-    "                {\"messages\": state}, {\"tags\": [f\"attempt:{attempt}\"]}\n",
-    "            )\n",
-    "            try:\n",
-    "                self.validator.invoke(response)\n",
-    "                return response\n",
-    "            except ValidationError as e:\n",
-    "                state = state + [\n",
-    "                    response,\n",
-    "                    ToolMessage(\n",
-    "                        content=f\"{repr(e)}\\n\\nPay close attention to the function schema.\\n\\n\"\n",
-    "                                + self.validator.schema_json()\n",
-    "                                + \" Respond by fixing all validation errors.\",\n",
-    "                        tool_call_id=response.tool_calls[0][\"id\"],\n",
-    "                    ),\n",
-    "                ]\n",
-    "        return response"
-   ],
-   "id": "7538d9aeeeb5f77f",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2024-07-28T06:15:40.146451Z",
      "start_time": "2024-07-28T06:15:40.103010Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from typing import List\n",
+    "\n",
     "from langchain_agents._schemas import AgentState\n",
     "\n",
     "\n",
@@ -359,7 +316,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## 1.3 Create Tool Node",
+   "source": "## 1.3 Secondary response Node",
    "id": "6d21aff56ddac9ef"
   },
   {
@@ -551,19 +508,6 @@
     }
    ],
    "execution_count": 11
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-28T06:15:55.519247Z",
-     "start_time": "2024-07-28T06:15:55.506244Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "2d37216552bf58a1",
-   "outputs": [],
-   "execution_count": 10
   }
  ],
  "metadata": {
